<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ute.webservice.voiceagent.activities.WelcomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MyActionBar_theme"
        app:popupTheme="@style/My_theme" />


    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@id/bottom_container"
        android:layout_below="@id/setting_toolbar"
        android:gravity="top"
        android:padding="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"

            android:layout_height="70dp"

            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/welcome_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_slategrey"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <RelativeLayout
            android:id="@+id/midlayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/welcome_message">

        <RelativeLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <Button
            android:id="@+id/bed_finder_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/bed_finder_label" />

            <Button
                android:id="@+id/cost_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bed_finder_button"
                android:layout_centerHorizontal="true"
                android:text="@string/surgery_cost_label" />

            <Button
                android:id="@+id/equipment_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cost_button"
                android:layout_centerHorizontal="true"
                android:text="@string/equipment_locator_label" />

            <Button
                android:id="@+id/on_call_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/equipment_button"
                android:text="@string/on_call_label" />
        </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp"
        tools:ignore="RtlHardcoded">

        <ai.api.ui.AIButton
            android:id="@+id/micButton"
            style="@style/ApiAi.Microphone"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:layout_above="@id/cancelButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/cancel" />

    </RelativeLayout>

</RelativeLayout>