<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ute.webservice.voiceagent.activities.WelcomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MyActionBar_theme"
        app:popupTheme="@style/My_theme">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user_icon"
            android:layout_gravity="right"/>


        <TextView
            android:id="@+id/userText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:layout_gravity="right"/>

    </android.support.v7.widget.Toolbar>



    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_container"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setting_toolbar"
        android:gravity="bottom"
        android:padding="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/query_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_slategrey"
            android:textSize="24sp"

            android:text="@string/on_call_list_message" />

        <EditText
            android:id="@+id/searchOnCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/query_text"
            android:layout_toEndOf="@id/searchButton"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/search_onCall_label" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/query_text"
            android:text="@string/search_onCall_button_label" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/searchOnCall"
            android:id="@+id/listView" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp"
        tools:ignore="RtlHardcoded">

        <ai.api.ui.AIButton
            android:id="@+id/micButton"
            style="@style/ApiAi.Microphone"
            android:layout_height="150dp"
            android:layout_width="150dp"

            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/cancel" />

    </RelativeLayout>

</RelativeLayout>